@@ -112,6 +112,11 @@ fixed bugs:
 - fixed infinite loop in LP file reader if a line exceeds the character limit
 - replaced calls to perror() by SCIP error message using strerror(errno); this avoids problems with the error output stream
 - fixed bug in method SCIPgetProbvarLinearSum() 
+- fixed bug in aggregateActiveIntVars(): If a < 0, multiply a*x + b*y == c by -1 (algo for finding initial solution 
+  does only work for a > 0).
+- fixed bugs in second part of consdataTightenCoefs(): Removed min/maxleftactisinfinity (definition was not
+  correct), fixed calculation of min/maxleftactivity, and removed asserts concerning whether all redundant vars
+  were deleted (led to different behavior in debug and opt mod).
 
 SCIP version 1.00
 =================
